--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-/* variables.css */
+/* variables.css
 
 :root {
     --primary-blue: #0058FF;
@@ -19,4 +19,4 @@
     --letter-spacing-tight: -3px;
     --box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     --transition-duration: 0.3s;
-}
+} */
